--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
     max-width: 1440px;
     margin: 0 auto;
   }
+  .min-container {
+    max-width: 1280px;
+    margin: 10 auto;
+  }
 
   .input {
     @apply sm:flex-1 max-sm:w-full text-base leading-normal text-slate-gray pl-5 max-sm:p-5 outline-none sm:border-none border max-sm:border-slate-gray max-sm:rounded-full;
